# TP-IASC

./: .gitignore  CROSS_ENTITY_WRITE_SOLUTION.md  PREGUNTAS-TODO.txt  check_status.ps1  check_status.sh  generate_data.py  launch_all.ps1  launch_all.sh  main.py  pyproject.toml  stop_all.ps1  stop_all.sh
app/: .env.example  config.py  dependencies.py  main.py  models.py  readme.md  storage.py  utils.py
app/cluster/: cluster_manager.py  modification_history.py  shard_manager.py  shard_strategy.py  sharded_storage.py
app/routers/: cluster.py  operators.py  reservations.py  users.py  windows.py
app/services/: node_recovery_service.py  notification_service.py  reservation_service.py  window_service.py
load_balancer/: conf.py  main.py  utils.py
sentinel/: config.yaml  config_loader.py  instances.py  main.py  models.py  polling_task.py  remote_peers.py  utils.py
sentinel/configs/: config0.yaml  config1.yaml  config2.yaml
sentinel/core/: __init__.py  dependencies.py
sentinel/models/: __init__.py  api.py  config.py  domain.py
sentinel/routers/: __init__.py  election.py  failover.py  health.py  instances.py  peers.py
sentinel/services/: __init__.py  cluster_service.py  peer_service.py  polling_service.py  shard_failover_service.py
sharding_tests/: README.md  test_sharding.py
